# BlitzHash

./: .gitignore  Cargo.toml  LICENSE  PRESENTATION.md  README.md  lib.rs
src/: lib.rs
tools/: SPEED_BUILD.sh
viz/: plot_results.py
